<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".sign_in.SignIn">

    <TextView
            android:id="@+id/title_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/redhatdisplay"
            android:text="@string/community_garden"
            android:textColor=" #64CB3F"
            android:textSize="36sp"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/emailTxt_signin"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:background="@drawable/textview_shape"
            android:ems="10"
            android:fontFamily="@font/redhatdisplay"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minLines="1"
            android:paddingStart="10dp"
            android:textColor="#FFFFFF"/>

    <EditText
            android:id="@+id/passwordTxt_signin"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
            android:background="@drawable/textview_shape"
            android:ems="10"
            android:fontFamily="@font/redhatdisplay"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minLines="1"
            android:paddingStart="10dp"
            android:textColor="#FFFFFF"/>

    <Button
            android:id="@+id/signInBtn_signin"
            android:layout_width="320dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="160dp"
            android:background="@drawable/positive_button_shape"
            android:fontFamily="@font/redhatdisplay_bold"
            android:onClick="LogIn_onclick"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:textSize="30sp"/>

    <Button
            android:id="@+id/signUpBtn_signin"
            android:layout_width="320dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="80dp"
            android:background="@drawable/negative_button_shape"
            android:fontFamily="@font/redhatdisplay_bold"
            android:onClick="SignUp_onclick"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="30sp"/>

    <CheckBox
        android:id="@+id/captchaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTxt_signin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="131dp"
        android:buttonTint="#FFFFFF"
        android:checked="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="Captcha_onClick"
        android:text="I am not a robot" />

    <TextView
        android:id="@+id/captchaErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/captchaCheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

</RelativeLayout>